--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Sorteio</string>
+    <string name="escolha_um_n_mero_entre_0_e_10">Escolha um número entre 0 e 10</string>
+    <string name="jogar">Jogar</string>
+    <string name="o_n_mero_selecionado">Nenhum numero selecionado</string>
 </resources>
